refactor UserPorfileActivity to OnBording activity, and make some design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".UserProfileActivity"
+            android:name=".OnBoardingActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
