--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:theme="@style/Theme.EKawaiiShop"
         tools:targetApi="31">
         <activity
+            android:name=".DetailedActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.RegisterActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activity.OnBoardingActivity"
             android:exported="true">
@@ -29,9 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
