--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.EKawaiiShop"
         tools:targetApi="31">
         <activity
-            android:name=".DetailedActivity"
+            android:name=".activity.DetailedActivity"
             android:exported="false" />
         <activity
             android:name=".activity.RegisterActivity"
