--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,14 @@
         android:theme="@style/Theme.EKawaiiShop"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ShowAllActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.DetailedActivity"
             android:exported="false" />
         <activity
             android:name=".activity.RegisterActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activity.OnBoardingActivity"
             android:exported="true">
@@ -31,7 +34,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
