--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:theme="@style/Theme.EKawaiiShop"
         tools:targetApi="31">
         <activity
-            android:name=".AddresActivity"
+            android:name=".activity.AddAddressActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.AddressActivity"
             android:exported="false" />
         <activity
             android:name=".activity.CartActivity"
@@ -28,7 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.OnBoardingActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
