--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,15 +34,17 @@
             android:exported="false" />
         <activity
             android:name=".activity.OnBoardingActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="false">
+
         </activity>
         <activity
             android:name=".activity.MainActivity"
